fix: changed nowrap to be normal on phone

--- a/pages/[artistSlug]/[songSlug]/_songTranslationPage.scss
+++ b/pages/[artistSlug]/[songSlug]/_songTranslationPage.scss
@@ -13,7 +13,10 @@
     font-size: $normalText;
     margin-bottom: 5rem;
     line-height: 1.75;
-    white-space: nowrap;
+    white-space: normal;
+    @media (min-width: $width2) {
+      white-space: nowrap;
+    }
   }
 
   .desktop-only-section {
